# hermes-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api_server.py  cli.py  space_app.py
allstock/: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
allstock/docs/: IOS_APP_STORE.md
allstock/examples/: demo.py
allstock/ios/: README.md
allstock/ios/AllStockKit/: Package.swift
allstock/ios/AllStockKit/Sources/AllStockKit/: BuiltinStocks.swift  Curves.swift  FilmEngine.swift  FilmStock.swift  FloatImage.swift  RNG.swift
allstock/ios/AllStockKit/Tests/AllStockKitTests/: AllStockKitTests.swift
allstock/ios/App/: AllStockApp.swift  DevelopView.swift  ImageBridge.swift  LearnView.swift  StocksView.swift
allstock/src/allstock/: __init__.py  cli.py  curves.py  designer.py  engine.py  generate.py  grain.py  imaging.py  knowledge.py  library.py  stock.py
allstock/src/allstock/data/knowledge/: characteristic-curve.md  color-negative.md  designing-stocks.md  development.md  digital-emulation.md  drying.md  emulsion.md  grain.md  halation.md  latent-image.md  layers.md  overview.md  push-pull.md  scanning-printing.md  spectral-sensitivity.md
allstock/src/allstock/server/: __init__.py  app.py
allstock/tests/: test_designer.py  test_engine.py  test_generate_knowledge_cli.py  test_server.py
analogforge/: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
analogforge/src/analogforge/: __init__.py  cli.py  curves.py  designer.py  engine.py  generate.py  halation.py  knowledge.py  optics.py  stock.py
analogforge/tests/: test_designer.py  test_engine.py  test_generate_knowledge_cli.py
hermes_cli/: commands.py  learn.py  main.py
introspection_study/: README.md  __init__.py  __main__.py  archivist.py  client.py  coder.py  models.py  orchestrator.py  prober.py  question_bank.py  questions.yaml
tests/: test_introspection_study.py
tests/hermes_cli/: test_learn.py
