[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allstock"
version = "0.1.0"
description = "Physically-grounded analog film emulation engine, film-stock designer, and analog-aware image generation — replicate film from emulsion to dried negative, and forge your own stocks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AllStock" }]
keywords = [
    "film", "analog", "emulation", "photography", "darkroom",
    "film-simulation", "halation", "grain", "characteristic-curve",
    "image-processing", "generative",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.21",
    "pillow>=9.0",
]

[project.optional-dependencies]
generate = ["requests>=2.25"]
dev = ["pytest>=7.0", "httpx>=0.24"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
allstock = "allstock.cli:main"
allstock-server = "allstock.server.app:run"

[project.urls]
Homepage = "https://github.com/allstock/allstock"
Documentation = "https://github.com/allstock/allstock#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/allstock"]

[tool.hatch.build.targets.wheel.force-include]
"src/allstock/data" = "allstock/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
